# norm

./: .gitignore  Cargo.toml  README.md  fuzz.sh  profile.sh  profile_decoder.sh  rustfmt.toml
.github/workflows/: tests.yml
features/: README.md
fuzz/: Cargo.toml
fuzz/src/: main.rs
src/: bitstream.rs  crc32.rs  decoder.rs  deflate.rs  grammar.rs  impl_read.rs  interlace.rs  lib.rs  main.rs  renderer.rs  scanline_reader.rs  ssim.rs  test_file_parser.rs  texture.rs  util.rs
src/font/: grammar.rs  mod.rs  parser.rs  shaper.rs
src/image/: grammar.rs  mod.rs  reader.rs
src/jpeg/: decoder.rs  grammar.rs  mod.rs
src/png/: chunk.rs  decoder.rs  encoder.rs  grammar.rs  mod.rs  scanline_reader.rs  scanline_writer.rs  ssim.rs
src/qoi/: decoder.rs  grammar.rs  mod.rs
src/renderer/: app_state.rs  blur.rs  camera.rs  color_tone.rs  compute_effect.rs  device.rs  draw_uniform.rs  effect_pipeline.rs  feature_uniform.rs  gamma_correct_compute.wgsl  gpu_state.rs  grayscale.rs  image_buffer.rs  image_shader.wgsl  mod.rs  mouse_state.rs  quad_shader.wgsl  quad_uniform.rs  rectangle_buffer.rs  shader.rs  shader.wgsl  shape.rs  shape_shader.wgsl  shape_uniform.rs  state.rs  texture.rs  vertex.rs
src/renderer/shaders/: color_correct_compute.wgsl  copy_compute.wgsl  grayscale_compute.wgsl  image_shader.wgsl  invert_compute.wgsl
src/util/: event_log.rs  mod.rs  read_bytes.rs  test_file_parser.rs  write_bytes.rs
test_suite/: basn0g08  basn4a08  basn6a08  f00n0g08  f00n2c08  f01n0g08  f01n2c08  f02n0g08  f02n2c08  f03n0g08  f03n2c08  f04n0g08  f04n2c08
tests/: basn0g08  basn4a08  basn6a08  f00n0g08  f00n2c08  f01n0g08  f01n2c08  f02n0g08  f02n2c08  f03n0g08  f03n2c08  f04n0g08  f04n2c08
