[package]
name = "png"
version = "0.1.0"
edition = "2021"
default-run = "png"
resolver = "2"

[[bin]]
name = "profile"
path = "./bin/profile.rs"

[[bin]]
name = "png-test-suite"
path = "./bin/png_test_suite.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
debug = true

[dependencies]
crc32fast = "1.4.2"
flate2 = "1.0.35"

anyhow = "1.0.94"

# renderer
cfg-if = "1"
bytemuck = { version = "1.16", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
wgpu = "22.0"
winit = { version = "0.29", features = ["rwh_05"] }

# util
comfy-table = "7.1.3"

[dev-dependencies]
pretty_assertions = "1.4.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
wgpu = { version = "22.0", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
] }

