[package]
name = "iris-png"
authors = ["Matthew Kim"]
version = "0.1.1"
edition = "2021"
description = "An image editor written from scratch (as close as possible)."
readme = "README.md"
repository = "https://github.com/friendlymatthew/iris/"
default-run = "iris"
resolver = "2"
license = "MIT"
exclude = [
    "tests/*",
    "test_suite/*",
    "fuzz/*",
    "features/*",
    "fuzz.sh",
    "profile.sh",
    ".github/",
]

[[bin]]
name = "iris"
path = "src/main.rs"

[[bin]]
name = "iris-decode"
path = "src/bin/decode.rs"

[[bin]]
name = "iris-lato-glyphs"
path = "src/bin/lato_glyphs.rs"

[[bin]]
name = "iris-ssim"
path = "src/bin/ssim.rs"

[[bin]]
name = "iris-png-test-suite"
path = "src/bin/test_suite.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
debug = 1
panic = "abort"
lto = true
codegen-units = 1

[features]
time = []

[dependencies]
crc32fast = "1.4.2"
flate2 = "1.0.35"
anyhow = "1.0.94"
cfg-if = "1"
bytemuck = { version = "1.16", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
wgpu = "22.0"
winit = { version = "0.29", features = ["rwh_05"] }
comfy-table = "7.1.3"

[dev-dependencies]
pretty_assertions = "1.4.1"
image = "0.25.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
wgpu = { version = "22.0", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
